--- a/.github/Dockerfile.release
+++ b/.github/Dockerfile.release
@@ -22,12 +22,12 @@ RUN apt-get update && \
     ssh \
     unzip
 
-# Install python 3.11 and set is as the default
+# Install python 3.12 and set is as the default
 RUN add-apt-repository ppa:deadsnakes/ppa && \
     apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends python3.11 python3.11-dev python3.11-venv python3.11-distutils python3-pip && \
-    update-alternatives --install /usr/bin/python python /usr/bin/python3.11 1 && \
-    update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1 && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends python3.12 python3.12-dev python3.12-venv python3-pip && \
+    update-alternatives --install /usr/bin/python python /usr/bin/python3.12 1 && \
+    update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.12 1 && \
     python -m pip install --no-cache-dir --upgrade pip
 
 # Install system dependencies
