--- a/.github/workflows/call-build-manylinux.yml
+++ b/.github/workflows/call-build-manylinux.yml
@@ -40,7 +40,6 @@ jobs:
         env:
           CIBW_ENVIRONMENT: "IN_CIBW_ENV=ON"
           CIBW_MANYLINUX_X86_64_IMAGE: ${{ inputs.docker-image }}
-          CIBW_BEFORE_ALL: "ls -la /usr/bin/c* || true"
           CIBW_SKIP: "*-musllinux_*"
         run: python -m cibuildwheel --output-dir "${{ steps.strings.outputs.wheel-output-dir }}" --config-file "${{ steps.strings.outputs.work-dir }}/python_package/pyproject.toml" ${{ steps.strings.outputs.work-dir }}/python_package
 
@@ -61,3 +60,18 @@ jobs:
           name: xla-whl-manylinux
           path: ${{ steps.strings.outputs.wheel-output-dir }}/*.whl
           if-no-files-found: error
+
+      - name: Build vllm plugin wheel
+        env:
+          CIBW_ENVIRONMENT: "IN_CIBW_ENV=ON"
+          CIBW_MANYLINUX_X86_64_IMAGE: ${{ inputs.docker-image }}
+          CIBW_BEFORE_ALL: "ls -la /usr/bin/c* || true"
+          CIBW_SKIP: "*-musllinux_*"
+        shell: bash
+        run: python -m cibuildwheel --output-dir "${{ steps.strings.outputs.work-dir }}/integrations/vllm_plugin/dist" ${{ steps.strings.outputs.work-dir }}/integrations/vllm_plugin
+
+      - name: Upload the vllm plugin wheel
+        uses: actions/upload-artifact@v4
+        with:
+            name: vllm-tt-whl-manylinux
+            path: ${{ steps.strings.outputs.work-dir }}/integrations/vllm_plugin/dist/vllm_tt*.whl
