--- a/.github/workflows/call-build-manylinux.yml
+++ b/.github/workflows/call-build-manylinux.yml
@@ -43,7 +43,7 @@ jobs:
           CIBW_BEFORE_ALL: "ls -la /usr/bin/c* || true"
           CIBW_SKIP: "*-musllinux_*"
         shell: bash
-        run: python -m cibuildwheel --output-dir "${{ steps.strings.outputs.work-dir }}/integrations/vllm_plugin/dist" ${{ steps.strings.outputs.work-dir }}/integrations/vllm_plugin
+        run: python -m cibuildwheel --output-dir "${{ steps.strings.outputs.work-dir }}/integrations/vllm_plugin/dist" --config-file "${{ steps.strings.outputs.work-dir }}/integrations/vllm_plugin/pyproject.toml" ${{ steps.strings.outputs.work-dir }}/integrations/vllm_plugin
 
       - name: Upload the vllm plugin wheel
         uses: actions/upload-artifact@v4
