--- a/tests/runner/test_config/jax/test_config_inference_tensor_parallel.yaml
+++ b/tests/runner/test_config/jax/test_config_inference_tensor_parallel.yaml
@@ -193,6 +193,26 @@ test_config:
     assert_pcc: false
     reason: "Severe PCC comparison failed: pcc=0.144 < 0.99 required"
 
+  mamba/causal_lm/jax-mamba-370m-hf-tensor_parallel-inference:
+    supported_archs: ["n300-llmbox"]
+    status: KNOWN_FAILURE_XFAIL
+    reason: "error: expects input feature dimension (1536) to be a multiple of feature_group_count. Got feature_group_count = 3072. - https://github.com/tenstorrent/tt-xla/issues/3429"
+
+  mamba/causal_lm/jax-mamba-790m-hf-tensor_parallel-inference:
+    supported_archs: ["n300-llmbox"]
+    status: KNOWN_FAILURE_XFAIL
+    reason: "error: expects input feature dimension (1536) to be a multiple of feature_group_count. Got feature_group_count = 3072. - https://github.com/tenstorrent/tt-xla/issues/3429"
+
+  mamba/causal_lm/jax-mamba-2.8b-hf-tensor_parallel-inference:
+    supported_archs: ["n300-llmbox"]
+    status: KNOWN_FAILURE_XFAIL
+    reason: "error: expects input feature dimension (1536) to be a multiple of feature_group_count. Got feature_group_count = 3072. - https://github.com/tenstorrent/tt-xla/issues/3429"
+
+  mamba/causal_lm/jax-mamba-1.4b-hf-tensor_parallel-inference:
+    supported_archs: ["n300-llmbox"]
+    status: KNOWN_FAILURE_XFAIL
+    reason: "error: expects input feature dimension (1536) to be a multiple of feature_group_count. Got feature_group_count = 3072. - https://github.com/tenstorrent/tt-xla/issues/3429"
+
   phi1/causal_lm/jax-Phi_1-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
     status: EXPECTED_PASSING
